Changed email form type to email

--- a/FrontEndCode/RegisterCssLap.css
+++ b/FrontEndCode/RegisterCssLap.css
@@ -15,6 +15,16 @@
         background-color: #303346;
     }
 
+    input[type="email"] {
+        color: white;
+        width: 96%;
+        padding: 10px;
+        margin: 10px 0;
+        border: none;
+        border-radius: 6px;
+        background-color: #303346;
+    }
+
     input[type="submit"] {
         margin: 10px 0px;
         width: 100%;
