--- a/FrontEndCode/RegisterCssPho.css
+++ b/FrontEndCode/RegisterCssPho.css
@@ -96,7 +96,7 @@
     input[type="submit"] {
         margin: 10px 0px;
         width: 100%;
-        background-color: #0088DC; /* bluish*/
+        background-color: #0088DC;
         color: white;              
         padding: 10px 20px;        
         border: none;             
@@ -137,7 +137,7 @@
         margin-top: 70px;
         width: 300px;
         height: 430px;
-        background-color: #15182B;
+        background-color: #2b2a15;
         border-radius: 10px;
         padding: 10px 15px;
 
