--- a/FrontEndCode/RegisterCssPho.css
+++ b/FrontEndCode/RegisterCssPho.css
@@ -137,7 +137,7 @@
         margin-top: 70px;
         width: 300px;
         height: 430px;
-        background-color: #2b2a15;
+        background-color: #15182B;;
         border-radius: 10px;
         padding: 10px 15px;
 
