removed useless comments and wrote my name in the files where I worked.

--- a/FrontEndCode/RegisterCssLap.css
+++ b/FrontEndCode/RegisterCssLap.css
@@ -1,9 +1,9 @@
-
+/*(Serhii Artemenko)*/
 @media screen and (min-width: 769px) {
+
     .hamburger{
         display: none;
     }
-
 
     input[type="text"] {
         color: white;
