forgot to add @author in some files

--- a/FrontEndCode/Landing.css
+++ b/FrontEndCode/Landing.css
@@ -1,4 +1,4 @@
-/* (Serhii Artemenko) */
+/* @author (Serhii Artemenko) */
 @media screen and (max-width: 768px){
     .LinksForPhone {
         display: none;
