--- a/FrontEndCode/LoginCssLap.css
+++ b/FrontEndCode/LoginCssLap.css
@@ -1,4 +1,4 @@
-/*(Serhii Artemenko)*/
+/*@author (Serhii Artemenko)*/
 @media screen and (min-width: 769px) {
     .hamburger{
         display: none;
